plang/testing/logs/false-incorrect/56/program56.p.p.out
Error at iS (cn9 b9zSo d) :- (k PLRd Y).:5:19 error: 
iS (cn9 b9zSo d) :- (k PLRd Y).
                  ^
Error at iS (cn9 b9zSo d) :- (k PLRd Y).:5:29 error: 
iS (cn9 b9zSo d) :- (k PLRd Y).
                            ^
Error at ? (((z49oJ)), i b c9, a u; fEP ZSEHh P h (Ye), fHvDT (mf), (sUKV); g r6T8 HWX upsSq (MaTs); fbdj (XZt) (DLT) FFJCt (kSem lpJ M7 YLNFr); (piJ6)).:6:1 error: 
? (((z49oJ)), i b c9, a u; fEP ZSEHh P h (Ye), fHvDT (mf), (sUKV); g r6T8 HWX upsSq (MaTs); fbdj (XZt) (DLT) FFJCt (kSem lpJ M7 YLNFr); (piJ6)).
^