plang/testing/logs/false-incorrect/56/program56.p.p
p (R3MG) Q9Z (MbVT) ZePi.

z2eCD D Uc0r (dSY).
rKX xyfe PEBy c.
iS (cn9 b9zSo d) :- (k PLRd Y).
? (((z49oJ)), i b c9, a u; fEP ZSEHh P h (Ye), fHvDT (mf), (sUKV); g r6T8 HWX upsSq (MaTs); fbdj (XZt) (DLT) FFJCt (kSem lpJ M7 YLNFr); (piJ6)).

